[gd_scene load_steps=6 format=3 uid="uid://bq5vc1fjq6qse"]

[ext_resource type="Texture2D" uid="uid://dn8qkjuhxtum8" path="res://icon.svg" id="1_mtdvb"]
[ext_resource type="Script" path="res://Scripts/enemy_base.gd" id="2_i2bko"]
[ext_resource type="FontFile" uid="uid://kqx4m6h6ygf4" path="res://Fonts/BlackOpsOne-Regular.ttf" id="3_8xc56"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1eskn"]
size = Vector2(128, 192)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohlrk"]
size = Vector2(136, 192)

[node name="EnemyBase" type="StaticBody2D" groups=["enemy"]]
collision_mask = 0
script = ExtResource("2_i2bko")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(128, 384)
shape = SubResource("RectangleShape2D_1eskn")

[node name="Sprite" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 0, 1)
position = Vector2(128, 384)
scale = Vector2(1, 1.5)
texture = ExtResource("1_mtdvb")

[node name="Spawnpoint" type="Marker2D" parent="."]
position = Vector2(128, 448)

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(128, 384)
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_ohlrk")

[node name="HitpointsLabel" type="Label" parent="."]
offset_left = 64.0
offset_top = 256.0
offset_right = 192.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("3_8xc56")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="Hitbox" to="." method="_on_opponent_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_opponent_body_exited"]
